css/main.styl
/* ==== Site Colours =======================*/
homeColour = #800000;
/*aboutColour = #006600;
educationColour = #004d4d;
skillsColour = #c05656;
contactColour = #803a00;*/
aboutColour = #4CAF50;  //Green
educationColour = #3F51B5; //Indigo
skillsColour = #FF5722; //Orange
contactColour = #9C27B0; //Purple


html{
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ===== Initializr Styles ==================================================
   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   ========================================================================== */

body {
    font: 16px/26px Helvetica, Helvetica Neue, Arial;
    background: homeColour;
}



/* ==============
    MOBILE: Menu
   ============== */

nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

nav a {
    display: block;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
    margin-right: 1em;
    padding: 15px;
    width: 120px;
}

nav a:hover,
nav a:visited,
nav a:link {
    color: white;
}

nav a:hover {
    text-decoration: underline;
}

/* ==============
    MOBILE: Main
   ============== */

.main {
    padding: 30px 0;
}

.main article h1 {
    font-size: 2em;
}

.main aside {
    color: white;
    padding: 0px 5% 10px;
}

.footer-container footer {
    color: white;
    padding: 20px 0;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

header{
  text-align: center;
}
#mainHeader a{
  color: #FFF;
}

.viewPage{
  padding: 3em;
  background: #fff;
}

nav{
  margin: 0;
  margin-bottom: 3em;
}

#homePage nav{
  margin-bottom: 0;
}

a{
  text-decoration: none;
  color: blue;
}

a:visited{
  color: blue;
}

ul.noStyle{
  list-style: none;
  padding-left: 0;
}

//Set background colours for nav buttons
#homePage, #Home-link a{
  background: homeColour;
}

#About-link a{
  background: aboutColour;
}

#Education-link a{
  background: educationColour;
}

#Skills-link a{
  background: skillsColour;
}

#Contact-link a{
  background: contactColour;
}

#educationPage h3{
  margin-bottom: .3em;
}

#continuingEd{
  padding-top: 1.5em;
}

#continuingEd a{
  padding-left: 5px;
}

#contactPage input,
#contactPage textarea{
  padding: 5px;
  border-radius:5px;
}

#contactPage input{
  width: 300px;
}

#contactPage textarea{
  height: 250px;
  width: 500px;
}

#contactPage label{
  font-weight: bold;
}

#contactPage .form-group{
  margin-bottom: 1.5em;
}

#contactPage .emailResult{
  background-color: green;
  color: #ffffff;
  font-size: 1.5em;
  padding: 1em;
  margin: 2em 0 2em 0;
  border-radius: 8px;
}

#contactPage .emailResult.sendError{
  background-color: red;
}

// style confirmation messages
.fadein.ng-hide-remove,
.fadeout.ng-hide-add {
    -webkit-transition: 1000ms ease-in-out all;
    -moz-transition: 1000ms ease-in-out all;
    -o-transition: 1000ms ease-in-out all;
    transition: 1000ms ease-in-out all;
    display: block !important;
}

.fadein.ng-hide-remove,
.fadeout.ng-hide-add.ng-hide-add-active {
    opacity: 0;
}

.fadeout.ng-hide-add,
.fadein.ng-hide-remove.ng-hide-remove-active {
    opacity: 1;
}

// styles for contact page send mail button
.sendMailBtn {
	-moz-box-shadow: 0px 10px 14px -7px #276873;
	-webkit-box-shadow: 0px 10px 14px -7px #276873;
	box-shadow: 0px 10px 14px -7px #276873;
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
	background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
	background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
	background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
	background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
	filter: unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99', GradientType=0)");
	background-color:#599bb3;
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border-radius:8px;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
	font-size:20px;
	font-weight:bold;
	padding:13px 32px;
	text-decoration:none;
	text-shadow:0px 1px 0px #3d768a;
}
.sendMailBtn:hover {
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
	background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
	background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
	background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
	background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
	filter: unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3', GradientType=0)");
	background-color:#408c99;
}
.sendMailBtn:active {
	position:relative;
	top:1px;
}
/* ... */

